k8s/apps/docuseal/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: docuseal
  namespace: docuseal
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "DocuSeal"
    gethomepage.dev/description: "Open source document signing"
    gethomepage.dev/group: "tools"
    gethomepage.dev/icon: "docuseal.png"
    gethomepage.dev/href: "https://docuseal.item.fyi"
    gethomepage.dev/siteMonitor: "http://docuseal.docuseal.svc.cluster.local/up"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=docuseal"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`docuseal.item.fyi`)
      services:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
  tls: {}
